// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`slot memoization: behavior > bound slot params keep memoization when the method is stable 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput, markRaw, createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, ["slots.default.@cb"]);
  
  let block1 = createBlock(\`<div><block-child-0/><block-child-1/></div>\`);
  
  function slot1(ctx, node, key = "") {
    return text(\`x\`);
  }
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].tick());
    const slotParam1 = ctx['this'].getValue;
    const b4 = comp1({"slots.default.@cb": slotParam1,slots: markRaw({'default': {__render: slot1.bind(this), __ctx: ctx, cb: slotParam1.bind(this)}})}, key + \`__1\`, node, this, null);
    return block1([], [b2, b4]);
  }
}"
`;

exports[`slot memoization: behavior > bound slot params keep memoization when the method is stable 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<span><block-child-0/><block-child-1/></span>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].track());
    const b3 = safeOutput(ctx['this'].props.slots.default.cb());
    return block1([], [b2, b3]);
  }
}"
`;

exports[`slot memoization: behavior > child re-renders when a captured t-set value changes 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput, markRaw, createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, ["slots.label"]);
  
  let block1 = createBlock(\`<div><block-child-0/><block-child-1/></div>\`);
  
  function slot1(ctx, node, key = "") {
    return safeOutput(ctx['label']);
  }
  
  return function template(ctx, node, key = "") {
    ctx = Object.create(ctx);
    ctx["label"] = ctx['this'].label();
    const b2 = safeOutput(ctx['this'].tick());
    const b4 = comp1({"slots.label": ctx['label'],slots: markRaw({'default': {__render: slot1.bind(this), __ctx: ctx}})}, key + \`__1\`, node, this, null);
    return block1([], [b2, b4]);
  }
}"
`;

exports[`slot memoization: behavior > child re-renders when a captured t-set value changes 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput, callSlot } = helpers;
  
  let block1 = createBlock(\`<span><block-child-0/><block-child-1/></span>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].track());
    const b3 = callSlot(ctx, node, key, 'default', false, {});
    return block1([], [b2, b3]);
  }
}"
`;

exports[`slot memoization: behavior > child with static slot content is not re-rendered by parent renders 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput, markRaw, createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, []);
  
  let block1 = createBlock(\`<div><block-child-0/><block-child-1/></div>\`);
  
  function slot1(ctx, node, key = "") {
    return text(\`some text\`);
  }
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].tick());
    const b4 = comp1({slots: markRaw({'default': {__render: slot1.bind(this), __ctx: ctx}})}, key + \`__1\`, node, this, null);
    return block1([], [b2, b4]);
  }
}"
`;

exports[`slot memoization: behavior > child with static slot content is not re-rendered by parent renders 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput, callSlot } = helpers;
  
  let block1 = createBlock(\`<span><block-child-0/><block-child-1/></span>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].track());
    const b3 = callSlot(ctx, node, key, 'default', false, {});
    return block1([], [b2, b3]);
  }
}"
`;

exports[`slot memoization: behavior > deep renders bypass slot memoization 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput, markRaw, createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, []);
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  function slot1(ctx, node, key = "") {
    return safeOutput(ctx['this'].plain);
  }
  
  return function template(ctx, node, key = "") {
    const b3 = comp1({slots: markRaw({'default': {__render: slot1.bind(this), __ctx: ctx}})}, key + \`__1\`, node, this, null);
    return block1([], [b3]);
  }
}"
`;

exports[`slot memoization: behavior > deep renders bypass slot memoization 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { callSlot } = helpers;
  
  let block1 = createBlock(\`<span><block-child-0/></span>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = callSlot(ctx, node, key, 'default', false, {});
    return block1([], [b2]);
  }
}"
`;

exports[`slot memoization: behavior > forwarded slots are captured by identity through a wrapper 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput, markRaw, createComponent } = helpers;
  const comp1 = createComponent(app, \`Middle\`, true, false, false, ["slots.msg"]);
  
  function slot1(ctx, node, key = "") {
    return safeOutput(ctx['msg']);
  }
  
  return function template(ctx, node, key = "") {
    ctx = Object.create(ctx);
    ctx["msg"] = ctx['this'].msg();
    return comp1({"slots.msg": ctx['msg'],slots: markRaw({'default': {__render: slot1.bind(this), __ctx: ctx}})}, key + \`__1\`, node, this, null);
  }
}"
`;

exports[`slot memoization: behavior > forwarded slots are captured by identity through a wrapper 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput, callSlot, markRaw, createComponent } = helpers;
  const comp1 = createComponent(app, \`Leaf\`, true, false, false, ["slots.__fwd.default"]);
  
  let block1 = createBlock(\`<div><block-child-0/><block-child-1/></div>\`);
  
  function slot1(ctx, node, key = "") {
    return callSlot(ctx, node, key, 'default', false, {});
  }
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].tick());
    const b4 = comp1({"slots.__fwd.default": ctx.__owl__.props.slots?.['default'],slots: markRaw({'default': {__render: slot1.bind(this), __ctx: ctx}})}, key + \`__1\`, node, this, null);
    return block1([], [b2, b4]);
  }
}"
`;

exports[`slot memoization: behavior > forwarded slots are captured by identity through a wrapper 3`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput, callSlot } = helpers;
  
  let block1 = createBlock(\`<p><block-child-0/><block-child-1/></p>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].track());
    const b3 = callSlot(ctx, node, key, 'default', false, {});
    return block1([], [b2, b3]);
  }
}"
`;

exports[`slot memoization: behavior > non-reactive slot reads do not refresh on unrelated parent renders 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput, markRaw, createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, []);
  
  let block1 = createBlock(\`<div><block-child-0/><block-child-1/></div>\`);
  
  function slot1(ctx, node, key = "") {
    return safeOutput(ctx['this'].plain);
  }
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].tick());
    const b4 = comp1({slots: markRaw({'default': {__render: slot1.bind(this), __ctx: ctx}})}, key + \`__1\`, node, this, null);
    return block1([], [b2, b4]);
  }
}"
`;

exports[`slot memoization: behavior > non-reactive slot reads do not refresh on unrelated parent renders 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { callSlot } = helpers;
  
  let block1 = createBlock(\`<span><block-child-0/></span>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = callSlot(ctx, node, key, 'default', false, {});
    return block1([], [b2]);
  }
}"
`;

exports[`slot memoization: behavior > siblings in a list are not re-rendered when one item is replaced 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { prepareList, safeOutput, markRaw, createComponent, withKey } = helpers;
  const comp1 = createComponent(app, \`Card\`, true, false, false, ["id","slots.item"]);
  
  function slot1(ctx, node, key = "") {
    return safeOutput(ctx['item'].name);
  }
  
  return function template(ctx, node, key = "") {
    const ctx1 = ctx;
    const [k_block1, v_block1, l_block1, c_block1] = prepareList(ctx['this'].items);;
    for (let i1 = 0; i1 < l_block1; i1++) {
      let ctx = Object.create(ctx1);
      ctx[\`item\`] = k_block1[i1];
      const key1 = ctx['item'].id;
      c_block1[i1] = withKey(comp1({id: ctx['item'].id,"slots.item": ctx['item'],slots: markRaw({'default': {__render: slot1.bind(this), __ctx: ctx}})}, key + \`__1__\${key1}\`, node, this, null), key1);
    }
    return list(c_block1);
  }
}"
`;

exports[`slot memoization: behavior > siblings in a list are not re-rendered when one item is replaced 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput, callSlot } = helpers;
  
  let block1 = createBlock(\`<div><block-child-0/><block-child-1/></div>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].track());
    const b3 = callSlot(ctx, node, key, 'default', false, {});
    return block1([], [b2, b3]);
  }
}"
`;

exports[`slot memoization: behavior > slot params are compared by value 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput, markRaw, createComponent } = helpers;
  const comp1 = createComponent(app, \`Dialog\`, true, false, false, ["slots.header.@param"]);
  
  let block1 = createBlock(\`<div><block-child-0/><block-child-1/></div>\`);
  
  function slot1(ctx, node, key = "") {
    return text(\`content\`);
  }
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].tick());
    const slotParam1 = ctx['this'].param();
    const b4 = comp1({"slots.header.@param": slotParam1,slots: markRaw({'header': {__render: slot1.bind(this), __ctx: ctx, param: slotParam1}})}, key + \`__1\`, node, this, null);
    return block1([], [b2, b4]);
  }
}"
`;

exports[`slot memoization: behavior > slot params are compared by value 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput, callSlot } = helpers;
  
  let block1 = createBlock(\`<div><block-child-0/><block-child-1/><block-child-2/></div>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].track());
    const b3 = safeOutput(ctx['this'].props.slots.header.param);
    const b4 = callSlot(ctx, node, key, 'header', false, {});
    return block1([], [b2, b3, b4]);
  }
}"
`;

exports[`slot memoization: behavior > t-call inside slot content disables memoization 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput, callTemplate, markRaw, createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, true, false, []);
  
  let block1 = createBlock(\`<div><block-child-0/><block-child-1/></div>\`);
  
  function slot1(ctx, node, key = "") {
    return callTemplate(\`__template__999\`, this, app, ctx, node, key + \`__1\`);
  }
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].tick());
    const b4 = comp1({slots: markRaw({'default': {__render: slot1.bind(this), __ctx: ctx}})}, key + \`__2\`, node, this, null);
    return block1([], [b2, b4]);
  }
}"
`;

exports[`slot memoization: behavior > t-call inside slot content disables memoization 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput, callSlot } = helpers;
  
  let block1 = createBlock(\`<div><block-child-0/><block-child-1/></div>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].track());
    const b3 = callSlot(ctx, node, key, 'default', false, {});
    return block1([], [b2, b3]);
  }
}"
`;

exports[`slot memoization: behavior > t-call inside slot content disables memoization 3`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  
  let block1 = createBlock(\`<span>sub</span>\`);
  
  return function template(ctx, node, key = "") {
    return block1();
  }
}"
`;
